--- a/popup/tabber.html
+++ b/popup/tabber.html
@@ -9,7 +9,7 @@
 			<div id="settings">⚙</div>Tabber<div id="infos">?</div>
 		</div>
 		<div id="save">
-			<input id="tabs_name" type="text" placeholder=""/>
+			<input id="tabs_name" type="text" placeholder="" autofocus/>
 			<input id="save_button" type="button" value="+"/>
 		</div>
 		<div id="list">
